[package]
name = "bash-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"  # Check for the latest version on crates.io
sysinfo = "0.32.0"
bincode = "1.3"
serde = "*"
rand = "*"
async-std = "1.9.0"
serde_json = "1"
image = "0.21"
steganography = "*"
imageproc = "0.23"
base64 = "0.21.5"
open = "5.0.1"
time = "0.3.30"
chrono = "0.4.31"
fs= "*"


[[bin]]
name = "server"
path = "src/bin/server/main.rs"