[package]
name = "bash-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.9.0"
tokio = {version = "1", features = ["full"]}
mini-redis = "0.4"
dotenv = "0.15"  # Check for the latest version on crates.io
serde = {version = "1", features = ["derive"]}
serde_json = "1"
steganography = "*"
imageproc = "0.23"
base64 = "0.21.5"
open = "5.0.1"
time = "0.3.30"
chrono = "0.4.31"
fs= "*"
sysinfo = "*"
bincode = "1.3"
rand = "*"
show-image = "0.13.0"
walkdir = "2.3"

image = "0.21"
png = "0.17"
rustyline = "14.0.0"
minifb = "0.27.0"
clap = "4.0"


[[bin]]
name = "server"
path = "src/bin/server/main.rs"